fixed spacing for project modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,28 +38,11 @@ a{
 .contactForm{
   padding: 1%;
 }
-/* .socialIcons{
-  color: white;
-  size: 4vw;
-  float: right;
-} */
-
-/* .btn {
-  background-color: #99CC99;
-  color: black;
-  border: 1px solid black;
-}
-
-.btn:hover {
-  background-color: #99CC33;
-  color: white;
-  border: 1px solid black;
-}
-
-.btn:focus, .btn:active {
-  outline: none;
-  box-shadow:none;
-} */
 .card{
   padding: 0px;
+}
+.work{
+  width: 18rem;
+  text-align: center;
+  margin-bottom: 5%;
 }
